// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GOLDEN buildHeaders (default executor providers) > alicode → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > alicode-intl → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > anthropic → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "anthropic-version": "2023-06-01",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "anthropic-version": "2023-06-01",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "anthropic-version": "2023-06-01",
    "x-api-key": "<CRED>",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > assemblyai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > blackbox → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > byteplus → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > cerebras → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > chutes → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > claude → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,oauth-2025-04-20,interleaved-thinking-2025-05-14,context-management-2025-06-27,prompt-caching-scope-2026-01-05,advanced-tool-use-2025-11-20,effort-2025-11-24,structured-outputs-2025-12-15,fast-mode-2026-02-01,redact-thinking-2026-02-12,token-efficient-tools-2026-03-28",
    "Anthropic-Dangerous-Direct-Browser-Access": "true",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "User-Agent": "claude-cli/2.1.92 (external, sdk-cli)",
    "X-App": "cli",
    "X-Stainless-Arch": "arm64",
    "X-Stainless-Helper-Method": "stream",
    "X-Stainless-Lang": "js",
    "X-Stainless-Os": "MacOS",
    "X-Stainless-Package-Version": "0.80.0",
    "X-Stainless-Retry-Count": "0",
    "X-Stainless-Runtime": "node",
    "X-Stainless-Runtime-Version": "v24.14.0",
    "X-Stainless-Timeout": "600",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Beta": "claude-code-20250219,oauth-2025-04-20,interleaved-thinking-2025-05-14,context-management-2025-06-27,prompt-caching-scope-2026-01-05,advanced-tool-use-2025-11-20,effort-2025-11-24,structured-outputs-2025-12-15,fast-mode-2026-02-01,redact-thinking-2026-02-12,token-efficient-tools-2026-03-28",
    "Anthropic-Dangerous-Direct-Browser-Access": "true",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "User-Agent": "claude-cli/2.1.92 (external, sdk-cli)",
    "X-App": "cli",
    "X-Stainless-Arch": "arm64",
    "X-Stainless-Helper-Method": "stream",
    "X-Stainless-Lang": "js",
    "X-Stainless-Os": "MacOS",
    "X-Stainless-Package-Version": "0.80.0",
    "X-Stainless-Retry-Count": "0",
    "X-Stainless-Runtime": "node",
    "X-Stainless-Runtime-Version": "v24.14.0",
    "X-Stainless-Timeout": "600",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,oauth-2025-04-20,interleaved-thinking-2025-05-14,context-management-2025-06-27,prompt-caching-scope-2026-01-05,advanced-tool-use-2025-11-20,effort-2025-11-24,structured-outputs-2025-12-15,fast-mode-2026-02-01,redact-thinking-2026-02-12,token-efficient-tools-2026-03-28",
    "Anthropic-Dangerous-Direct-Browser-Access": "true",
    "Anthropic-Version": "2023-06-01",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "claude-cli/2.1.92 (external, sdk-cli)",
    "X-App": "cli",
    "X-Stainless-Arch": "arm64",
    "X-Stainless-Helper-Method": "stream",
    "X-Stainless-Lang": "js",
    "X-Stainless-Os": "MacOS",
    "X-Stainless-Package-Version": "0.80.0",
    "X-Stainless-Retry-Count": "0",
    "X-Stainless-Runtime": "node",
    "X-Stainless-Runtime-Version": "v24.14.0",
    "X-Stainless-Timeout": "600",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > cline → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://cline.bot",
    "User-Agent": "ExtremeRouter/0.4.80",
    "X-CLIENT-TYPE": "@rsalmn/extremerouter",
    "X-CLIENT-VERSION": "0.4.80",
    "X-CORE-VERSION": "0.4.80",
    "X-IS-MULTIROOT": "false",
    "X-PLATFORM": "darwin",
    "X-PLATFORM-VERSION": "v22.22.0",
    "X-Title": "Cline",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://cline.bot",
    "User-Agent": "ExtremeRouter/0.4.80",
    "X-CLIENT-TYPE": "@rsalmn/extremerouter",
    "X-CLIENT-VERSION": "0.4.80",
    "X-CORE-VERSION": "0.4.80",
    "X-IS-MULTIROOT": "false",
    "X-PLATFORM": "darwin",
    "X-PLATFORM-VERSION": "v22.22.0",
    "X-Title": "Cline",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://cline.bot",
    "User-Agent": "ExtremeRouter/0.4.80",
    "X-CLIENT-TYPE": "@rsalmn/extremerouter",
    "X-CLIENT-VERSION": "0.4.80",
    "X-CORE-VERSION": "0.4.80",
    "X-IS-MULTIROOT": "false",
    "X-PLATFORM": "darwin",
    "X-PLATFORM-VERSION": "v22.22.0",
    "X-Title": "Cline",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > cloudflare-ai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > codebuddy-cn → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "CLI/2.108.1 CodeBuddy/2.108.1",
    "X-IDE-Name": "CLI",
    "X-IDE-Type": "CLI",
    "X-Product": "SaaS",
    "x-codebuddy-request": "1",
    "x-requested-with": "XMLHttpRequest",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "CLI/2.108.1 CodeBuddy/2.108.1",
    "X-IDE-Name": "CLI",
    "X-IDE-Type": "CLI",
    "X-Product": "SaaS",
    "x-codebuddy-request": "1",
    "x-requested-with": "XMLHttpRequest",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "User-Agent": "CLI/2.108.1 CodeBuddy/2.108.1",
    "X-IDE-Name": "CLI",
    "X-IDE-Type": "CLI",
    "X-Product": "SaaS",
    "x-codebuddy-request": "1",
    "x-requested-with": "XMLHttpRequest",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > cohere → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > deepgram → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > deepseek → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > fireworks → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > gemini → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Content-Type": "application/json",
    "x-goog-api-key": "<CRED>",
  },
  "nonStream": {
    "Content-Type": "application/json",
    "x-goog-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > gitlab → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > glm → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > glm-cn → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > groq → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > hyperbolic → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > kilocode → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > kimi → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > kimi-coding → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "X-Msh-Device-Id": "kimi-<TS>",
    "X-Msh-Device-Model": "darwin arm64",
    "X-Msh-Platform": "@rsalmn/extremerouter",
    "X-Msh-Version": "2.1.2",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "X-Msh-Device-Id": "kimi-<TS>",
    "X-Msh-Device-Model": "darwin arm64",
    "X-Msh-Platform": "@rsalmn/extremerouter",
    "X-Msh-Version": "2.1.2",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "X-Msh-Device-Id": "kimi-<TS>",
    "X-Msh-Device-Model": "darwin arm64",
    "X-Msh-Platform": "@rsalmn/extremerouter",
    "X-Msh-Version": "2.1.2",
    "x-api-key": "<CRED>",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > minimax → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > minimax-cn → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "nonStream": {
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Anthropic-Beta": "claude-code-20250219,interleaved-thinking-2025-05-14",
    "Anthropic-Version": "2023-06-01",
    "Content-Type": "application/json",
    "x-api-key": "<CRED>",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > mistral → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > mmf → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > nanobanana → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > nebius → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > nvidia → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > ollama → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > openai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > openrouter → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://endpoint-proxy.local",
    "X-Title": "Endpoint Proxy",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://endpoint-proxy.local",
    "X-Title": "Endpoint Proxy",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
    "HTTP-Referer": "https://endpoint-proxy.local",
    "X-Title": "Endpoint Proxy",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > perplexity → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > siliconflow → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > together → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > vercel-ai-gateway → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > volcengine-ark → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > xai → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildHeaders (default executor providers) > xiaomi-mimo → headers (apiKey / oauth) 1`] = `
{
  "apiKey": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "nonStream": {
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
  "oauth": {
    "Accept": "text/event-stream",
    "Authorization": "Bearer <TOK>",
    "Content-Type": "application/json",
  },
}
`;

exports[`GOLDEN buildUrl (default executor providers) > alicode → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://coding.dashscope.aliyuncs.com/v1/chat/completions",
  "stream": "https://coding.dashscope.aliyuncs.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > alicode-intl → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://coding-intl.dashscope.aliyuncs.com/v1/chat/completions",
  "stream": "https://coding-intl.dashscope.aliyuncs.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > anthropic → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.anthropic.com/v1/messages",
  "stream": "https://api.anthropic.com/v1/messages",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > assemblyai → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.assemblyai.com/v1/audio/transcriptions",
  "stream": "https://api.assemblyai.com/v1/audio/transcriptions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > blackbox → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.blackbox.ai/chat/completions",
  "stream": "https://api.blackbox.ai/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > byteplus → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://ark.ap-southeast.bytepluses.com/api/coding/v3/chat/completions",
  "stream": "https://ark.ap-southeast.bytepluses.com/api/coding/v3/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > cerebras → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.cerebras.ai/v1/chat/completions",
  "stream": "https://api.cerebras.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > chutes → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://llm.chutes.ai/v1/chat/completions",
  "stream": "https://llm.chutes.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > claude → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.anthropic.com/v1/messages?beta=true",
  "stream": "https://api.anthropic.com/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > cline → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.cline.bot/api/v1/chat/completions",
  "stream": "https://api.cline.bot/api/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > cloudflare-ai → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.cloudflare.com/client/v4/accounts/ACC123/ai/v1/chat/completions",
  "stream": "https://api.cloudflare.com/client/v4/accounts/ACC123/ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > codebuddy-cn → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://copilot.tencent.com/v2/chat/completions",
  "stream": "https://copilot.tencent.com/v2/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > cohere → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.cohere.ai/v1/chat/completions",
  "stream": "https://api.cohere.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > deepgram → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.deepgram.com/v1/listen",
  "stream": "https://api.deepgram.com/v1/listen",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > deepseek → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.deepseek.com/chat/completions",
  "stream": "https://api.deepseek.com/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > fireworks → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.fireworks.ai/inference/v1/chat/completions",
  "stream": "https://api.fireworks.ai/inference/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > gemini → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://generativelanguage.googleapis.com/v1beta/models/test-model:generateContent",
  "stream": "https://generativelanguage.googleapis.com/v1beta/models/test-model:streamGenerateContent?alt=sse",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > gitlab → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://gitlab.com/api/v4/chat/completions",
  "stream": "https://gitlab.com/api/v4/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > glm → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.z.ai/api/anthropic/v1/messages?beta=true",
  "stream": "https://api.z.ai/api/anthropic/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > glm-cn → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://open.bigmodel.cn/api/coding/paas/v4/chat/completions",
  "stream": "https://open.bigmodel.cn/api/coding/paas/v4/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > groq → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.groq.com/openai/v1/chat/completions",
  "stream": "https://api.groq.com/openai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > hyperbolic → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.hyperbolic.xyz/v1/chat/completions",
  "stream": "https://api.hyperbolic.xyz/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > kilocode → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.kilo.ai/api/openrouter/chat/completions",
  "stream": "https://api.kilo.ai/api/openrouter/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > kimi → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.kimi.com/coding/v1/messages?beta=true",
  "stream": "https://api.kimi.com/coding/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > kimi-coding → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.kimi.com/coding/v1/messages?beta=true",
  "stream": "https://api.kimi.com/coding/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > minimax → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.minimax.io/anthropic/v1/messages?beta=true",
  "stream": "https://api.minimax.io/anthropic/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > minimax-cn → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.minimaxi.com/anthropic/v1/messages?beta=true",
  "stream": "https://api.minimaxi.com/anthropic/v1/messages?beta=true",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > mistral → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.mistral.ai/v1/chat/completions",
  "stream": "https://api.mistral.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > mmf → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.xiaomimimo.com/api/free-ai/openai/chat",
  "stream": "https://api.xiaomimimo.com/api/free-ai/openai/chat",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > nanobanana → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.nanobananaapi.ai/v1/chat/completions",
  "stream": "https://api.nanobananaapi.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > nebius → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.studio.nebius.ai/v1/chat/completions",
  "stream": "https://api.studio.nebius.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > nvidia → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://integrate.api.nvidia.com/v1/chat/completions",
  "stream": "https://integrate.api.nvidia.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > ollama → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://ollama.com/api/chat",
  "stream": "https://ollama.com/api/chat",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > openai → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.openai.com/v1/chat/completions",
  "stream": "https://api.openai.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > openrouter → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://openrouter.ai/api/v1/chat/completions",
  "stream": "https://openrouter.ai/api/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > perplexity → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.perplexity.ai/chat/completions",
  "stream": "https://api.perplexity.ai/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > siliconflow → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.siliconflow.com/v1/chat/completions",
  "stream": "https://api.siliconflow.com/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > together → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.together.xyz/v1/chat/completions",
  "stream": "https://api.together.xyz/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > vercel-ai-gateway → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://ai-gateway.vercel.sh/v1/chat/completions",
  "stream": "https://ai-gateway.vercel.sh/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > volcengine-ark → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://ark.cn-beijing.volces.com/api/coding/v3/chat/completions",
  "stream": "https://ark.cn-beijing.volces.com/api/coding/v3/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > xai → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.x.ai/v1/chat/completions",
  "stream": "https://api.x.ai/v1/chat/completions",
}
`;

exports[`GOLDEN buildUrl (default executor providers) > xiaomi-mimo → url (stream + non-stream) 1`] = `
{
  "nonStream": "https://api.xiaomimimo.com/v1/chat/completions",
  "stream": "https://api.xiaomimimo.com/v1/chat/completions",
}
`;
